--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -21,6 +21,9 @@
         <td>
             <%= link_to "Show", article_path(i) %>
         </td>
+        <td>
+            <%= link_to "Delete", article_path(i), method: :delete, data: {confirm: "Are you sure?"} %>
+        </td>
     </tr>
     <% end %>
     
