--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,6 @@
-<h1>New site HOME</h1>
-<%= link_to "Alpha blog", articles_path %>
-<%= link_to 'About', about_path %>
+<div class="center jumbotron">
+  <h1>New site HOME</h1>
+  <%= link_to "Sign up", "#", class: "btn btn-danger btn-lg btn-xlarge" %>
+</div>
+
+
