--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,27 +1,32 @@
+<%= render "shared/errors", obj: @article %>
 
-<% if @article.errors.any? %>
-<h2>Following errors: </h2>
-<ul>
-  <% @article.errors.full_messages.each do |msg| %>
-  <li>
-    <% msg %>
-  </li>
-  <% end %>
-</ul>  
-<% end %>
-
-<%= form_for @article do |i| %>
-  <p>
-     <%= i.label :title %> </br>
-     <%= i.text_field :title %>
-  </p>
-  <p>
-      <%= i.label :description %></br>
-      <%= i.text_area :description %>
-  </p>
-  <p>
-      <%= i.submit %>
-  </p>
-<% end %>
-
-<%= link_to "Back to articles listing", articles_path %>
+<div class="row">
+  <div class="col-xs-12">
+    <%= form_for(@article, :html=> {class:"form-horizontal", role:"form"}) do |i| %>
+    <div class ="form-group">
+      <div class="control-label col-sm-2">
+         <%= i.label :title %>
+      </div>
+      <div class="col-sm-7">
+         <%= i.text_field :title, class:"form-control", placeholder: "Title of the Article", autofocus: true %>
+      </div>
+    </div>
+    <div class ="form-group">
+      <div class="control-label col-sm-2">  
+          <%= i.label :description %>
+      </div>
+      <div class="col-sm-7">
+          <%= i.text_area :description, rows: 10, class:"form-control", placeholder: "Body of article" %>
+      </div>
+    </div>  
+    <div class="form-grup">
+      <div class="col-sm-offset-2 col-sm-10">
+          <%= i.submit class: "btn btn-primary btn-lg" %>
+      </div>
+    </div>      
+    <% end %>
+    <div class="col-xs-4 col-xs-offset-4">
+      <%= link_to "Back to articles listing", articles_path %> 
+    </div>
+  </div>
+</div>
