--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,30 +1,19 @@
-<h1>Listing all articles</h1>
-<p>
-<%= link_to "Create new article", new_article_path %>
-</p>
-<table>
-    <tr>
-        <th>Title</th>
-        <th>Description</th>
-    </tr>
-    <% @articles.each do |i| %>
-    <tr>
-        <td>
-            <%= i.title %>
-        </td>
-        <td>
-            <%= i.description %>
-        </td>
-        <td>
-            <%= link_to "Edit", edit_article_path(i) %>
-        </td>
-        <td>
-            <%= link_to "Show", article_path(i) %>
-        </td>
-        <td>
-            <%= link_to "Delete", article_path(i), method: :delete, data: {confirm: "Are you sure?"} %>
-        </td>
-    </tr>
-    <% end %>
-    
-</table>
+<h1 align="center">Listing all articles</h1>
+<% @articles.each do |i| %>
+<div class="row">
+    <div class="col-xs-8 col-xs-offset-2">
+        <div class="well well-lg">
+            <div class="article-title">
+               <%= link_to i.title, article_path(i) %>
+            </div> 
+            <div class="article-body">
+               <%= truncate(i.description, length:100) %>
+            </div>  
+            <div class="article-actions">
+                <%= link_to "Edit this article", edit_article_path(i), class: "btn btn-xs btn-primary" %>
+                <%= link_to "Delete this article", article_path(i), method: :delete, data: { confirm: "Are you sure to delete this article?"}, class: "btn btn-xs btn-danger" %>
+            </div>
+        </div>
+    </div>
+</div>
+<% end %>
