--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,8 @@
 <h1 align="center">All alpha bloggers</h1>
 
 <div align="center">
-    <%= @users.each do |user| %>
+    <%= will_paginate %>
+    <% @users.each do |user| %>
         <ul class="listing">
             <div class="row">
                 <div class="well col-md-4 col-md-offset-4">
@@ -20,4 +21,5 @@
             </div>
         </ul>
     <% end %>
+    <%= will_paginate %>
 </div>
